trunk
o Can now add debugging symbols to build with -D DEBUG=1 .
o randomPool:
 * Removed long doubles
 * Size is now a uint64_t
 * Refactored: added abstract interface to random generator
 * Added 2D random generator and test 
o Removed redundancy of includes in diagnostic files
o Removed fake program deleteme.cpp
o fcnResponse,fcnComparison:
 * Added interface
 * Added 2D version
 * Added test
o printFuncDiff: added T(T,T) and void(uint32_t,T*,T*,T*) versions
o Atan2:
 * Added tests for response.
 
 
V0.2.3
o Fixed the installation of atan2.h

v0.2.2
o Removed typos in the documentation (thanks to A. Neumann for spotting this!)
o Fixed CMake to make the install working also on OSx

v0.2.1

o Shared library built by default instead of static one.
o make install now supported. To specify the install dir use the variable -DCMAKE_INSTALL_PREFIX= whith cmake.
o Vector signatures are now void (const unsigned int, T const *, T*)
o Petulant compilation flags (picky with warnings)